sd-core/src/prettyprinter/snapshots/sd_core__prettyprinter__spartan__tests__pretty_print_new_crash.snap
---
source: sd-core/src/prettyprinter/spartan.rs
expression: expr.to_pretty()
---
bind a = plus(c, f) in
bind b = plus(f) in
bind c = plus(b, x) in
bind d = plus(e) in
bind e = plus(d, a) in
bind f = plus(d) in
a
