sd-core/src/prettyprinter/snapshots/sd_core__prettyprinter__spartan__tests__pretty_print_recursive.snap
---
source: sd-core/src/prettyprinter/spartan.rs
expression: expr.to_pretty()
---
bind f = lambda(x .
    bind g = lambda(y . app(f, y)) in
    app(g, x)
) in
f
