sd-core/src/prettyprinter/snapshots/sd_core__prettyprinter__spartan__tests__pretty_print_swapping.snap
---
source: sd-core/src/prettyprinter/spartan.rs
expression: expr.to_pretty()
---
lambda(\a b d c . plus(c, b, a))
