sd-core/src/prettyprinter/snapshots/sd_core__prettyprinter__spartan__tests__pretty_print_thunk_copy.snap
---
source: sd-core/src/prettyprinter/spartan.rs
expression: expr.to_pretty()
---
bind x = lambda( . plus(y, y)) in
x
