sd-core/src/prettyprinter/snapshots/sd_core__prettyprinter__spartan__tests__pretty_print_tuples.snap
---
source: sd-core/src/prettyprinter/spartan.rs
expression: expr.to_pretty()
---
bind (a, b) = detuple(x) in
bind (c, d) = detuple(y) in
(tuple(a, d), tuple(b, c))
