sd-core/src/prettyprinter/snapshots/sd_core__prettyprinter__spartan__tests__thunks.snap
---
source: sd-core/src/prettyprinter/spartan.rs
expression: expr.to_pretty()
---
bind a = plus(y z .
    bind a = plus(x, y) in
    bind b = plus(a, z) in
    b
, y z u .
    bind a = plus(x, y) in
    bind b = plus(a, z) in
    bind c = plus(b, u) in
    c
, y z u v .
    bind a = plus(x, y) in
    bind b = plus(a, z) in
    bind c = plus(b, u) in
    bind d = plus(c, v) in
    d
) in
a
